Finished HTML xslt

--- a/XML_Lab2/XML_Lab2.csproj
+++ b/XML_Lab2/XML_Lab2.csproj
@@ -18,7 +18,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="XMLtoHTML.xsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
     <None Update="XMLtoTXT.xsl">
